--- a/app/src/main/res/layout/fragment_item_produto.xml
+++ b/app/src/main/res/layout/fragment_item_produto.xml
@@ -24,7 +24,7 @@
     <TextView
         android:id="@+id/txtNomeProd"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="Produto"
@@ -36,7 +36,7 @@
 
     <TextView
         android:id="@+id/txtPreco"
-        android:layout_width="0dp"
+        android:layout_width="252dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
@@ -51,4 +51,18 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.33" />
+
+    <TextView
+        android:id="@+id/txtDescricao"
+        android:layout_width="0dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text="Descrição"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/txtPreco" />
 </androidx.constraintlayout.widget.ConstraintLayout>
